[gd_scene load_steps=2 format=3]

[ext_resource path="res://scenes/StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0

[node name="SinglePlayer" type="Button" parent="MainMenu"]
focus_mode = 2

[node name="Multiplayer" type="Button" parent="MainMenu"]
focus_mode = 2

[node name="Settings" type="Button" parent="MainMenu"]
focus_mode = 2

[node name="Language" type="Button" parent="MainMenu"]
focus_mode = 2

[node name="Quit" type="Button" parent="MainMenu"]
focus_mode = 2

[node name="MultiplayerMenu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0

[node name="Host" type="Button" parent="MultiplayerMenu"]
focus_mode = 2

[node name="Join" type="Button" parent="MultiplayerMenu"]
focus_mode = 2

[node name="Back" type="Button" parent="MultiplayerMenu"]
focus_mode = 2

[node name="NotAvailable" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="NotAvailable"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinAddress" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0

[node name="VBoxContainer" type="VBoxContainer" parent="JoinAddress"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 1

[node name="AddressLabel" type="Label" parent="JoinAddress/VBoxContainer"]
horizontal_alignment = 1

[node name="AddressInput" type="LineEdit" parent="JoinAddress/VBoxContainer"]

[node name="Buttons" type="HBoxContainer" parent="JoinAddress/VBoxContainer"]
alignment = 1

[node name="Join" type="Button" parent="JoinAddress/VBoxContainer/Buttons"]
focus_mode = 2

[node name="Cancel" type="Button" parent="JoinAddress/VBoxContainer/Buttons"]
focus_mode = 2

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -40.0
margin_right = -10.0
margin_bottom = -10.0
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="MainMenu/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="MainMenu/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/Language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="JoinAddress/VBoxContainer/Buttons/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="JoinAddress/VBoxContainer/Buttons/Cancel" to="." method="_on_join_cancel_pressed"]
